save-file: Handle an unset Videos directory

This also fixes ~/Videos being used instead of the path to the real
videos directory.

https://bugzilla.gnome.org/show_bug.cgi?id=736231